# rust-warrior

./: .gitignore  .travis.yml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TODO.md  release.sh
.github/workflows/: rust.yml
src/: actions.rs  engine.rs  floor.rs  game.rs  level.rs  lib.rs  main.rs  player.rs  profile.rs  starter.rs  ui.rs  unit.rs  warrior.rs
src/engine/: components.rs  curses.rs  mod.rs  systems.rs  world.rs
src/engine/systems/: .player.rs.swp  archer.rs  mod.rs  player.rs  shooter.rs  sludge.rs  ui.rs
src/templates/: starter.rs
tests/: floor_tests.rs  unit_tests.rs  warrior_tests.rs
