[package]
name = "rust-warrior"
description = "Game for learning Rust, inspired by Ruby Warrior"
version = "0.11.0"
repository = "https://github.com/miller-time/rust-warrior"
documentation = "https://docs.rs/rust-warrior/"
readme = "README.md"
keywords = ["game", "learning", "rust", "specs"]
categories = ["games"]
license = "MIT"
authors = ["Russell Cousineau <miller.time.baby@gmail.com>"]
edition = "2021"

[badges.maintenance]
status = "actively-developed"

[dependencies]
base64 = "0.13"
serde = "1.0"
serde_derive = "1.0"
toml = "0.5"
