[package]
name = "rust-warrior"
description = "Game for learning Rust, inspired by Ruby Warrior"
version = "0.14.1"
repository = "https://github.com/miller-time/rust-warrior"
documentation = "https://docs.rs/rust-warrior/"
readme = "README.md"
keywords = ["game", "learning", "rust"]
categories = ["games"]
license = "MIT"
authors = ["Russell Cousineau <miller.time.baby@gmail.com>"]
edition = "2024"

[badges.maintenance]
status = "actively-developed"

[dependencies]
base64 = "0.22"
ncurses-lite = { version = "0.2", optional = true }
serde = "1.0"
serde_derive = "1.0"
toml = "1.0"

[features]
ncurses = ["dep:ncurses-lite"]
